# diff-poetry-lock

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  README.md  action.yaml  entrypoint.sh  pyproject.toml
.github/: dco.yml  dependabot.yml
.github/workflows/: diff-poetry-lock.yaml  docker.yaml  linters.yaml  test_and_lint.yml  zizmor.yml
diff_poetry_lock/: __init__.py  github.py  logging_utils.py  run_poetry.py  settings.py  utils.py
diff_poetry_lock/test/: test_poetry_diff.py  test_utils_get_nested.py
