[tool.poetry]
name = "diff-poetry-lock"
version = "1.0.1.dev0"
description = "A CI check that post to GitHub a summary of all changes within the poetry.lock file to a pull request"
authors = ["Nils Borrmann", "Colin Dean", "Lakshmi Narayanan"]
readme = "README.md"

[tool.poetry.scripts]
diff-poetry-lock = "diff_poetry_lock.run_poetry:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
poetry = "^1"
requests = "2.32.4"
pydantic = "^1.10.6"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9"
ruff = "*"
mypy = "^1"
types-requests = "^2.32.4"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".*", "dist", "__pypackages__", "build", "venv"]

[tool.ruff.lint]
select = [
  "A",     # flake8 built-ins
  "ANN",   # annotations
  "ASYNC", # async
  "B",     # bugbear
  "COM",   # commas
  "C4",    # comprehensions
  # "C90",# mccabe; disabled in template; see to enable: https://docs.astral.sh/ruff/settings/#lintmccabe
  # "D", # pydocstyle
  # "DOC",  # pydoclint; unavailable without preview, but we want it when it is out of preview
  "DTZ",  # datetime
  "E",    # pycodestyle errors
  "EM",   # error messages
  "F",    # pyflakes
  "G",    # logging format
  "I",    # import sorting
  "ICN",  # import conventions
  "LOG",  # logging
  "N",    # pep8-naming
  "NPY",  # numpy
  "PD",   # pandas-vet
  "PERF", # perflint
  "PLC",  # pylint conventions
  "PLE",  # pylint errors
  "PLW",  # pylint warnings
  "PT",   # pytest
  "PTH",  # pathlib; enable to find and remove os.path
  "Q",    # quotes
  "RET",  # returns
  "RSE",  # raise
  "RUF",  # ruff
  "SIM",  # simplify
  "TID",  # tidy imports
  "TRY",  # try
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]
ignore = [
  # D203: Incorrect blank link before class
  "D203",
  # D213: Multi-line summary second line
  "D213",
  # D400: First line should end with a period
  "D400",
  # D415: First line should end with a period, question mark, or exclamation point
  "D415",
  # COM812: Missing trailing commas; conflicts w/ ruff format, which handles this
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"diff_poetry_lock/test/*" = [
  "D", # pydocstyle, pydoclint
  # "DOC",   # docs, requires ruff preview
  "T201",    # no print
  "G004",    # log format
  "ANN001",  # argument type annotation
  "ANN201",  # function return type annotation
  "PLC0415", # import-outside-top-level; required in some tests
] # hardcoded values
